feat: disable ActionBar when splashscreeen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:theme="@style/AppTheme.noActionBar"
+            android:noHistory="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
